[gd_scene load_steps=26 format=3 uid="uid://cvxl2g0i4f70"]

[ext_resource type="Script" path="res://Gameplay/Player/playerscript.gd" id="1_37mwt"]
[ext_resource type="PackedScene" uid="uid://b6qwovm5f2f3o" path="res://Gameplay/Projectile/projectile.tscn" id="2_830mt"]
[ext_resource type="Texture2D" uid="uid://bca71nrl57kf0" path="res://Assets/fish1.png" id="2_pcj8n"]
[ext_resource type="Texture2D" uid="uid://ow7pw0m1ck7t" path="res://Assets/fishfall.png" id="4_0inpi"]
[ext_resource type="Texture2D" uid="uid://gyo4iqlnb18s" path="res://Assets/FishWalk.png" id="4_t37js"]
[ext_resource type="Texture2D" uid="uid://dhwin0srui52j" path="res://Assets/GlockShoot.png" id="5_8garg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xhpyp"]
size = Vector2(72, 88)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kvo5w"]
size = Vector2(72, 88)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nbbh"]
atlas = ExtResource("4_t37js")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_osrhs"]
atlas = ExtResource("4_t37js")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgty5"]
atlas = ExtResource("4_t37js")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dr4mj"]
atlas = ExtResource("4_t37js")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqc0n"]
atlas = ExtResource("4_t37js")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmov5"]
atlas = ExtResource("4_t37js")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_erro0"]
atlas = ExtResource("4_t37js")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_go000"]
atlas = ExtResource("4_t37js")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_cgg7v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_0inpi")
}],
"loop": true,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_pcj8n")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nbbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_osrhs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgty5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dr4mj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqc0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmov5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_erro0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_go000")
}],
"loop": true,
"name": &"walk",
"speed": 20.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_e8svr"]
atlas = ExtResource("5_8garg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgnse"]
atlas = ExtResource("5_8garg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xiws2"]
atlas = ExtResource("5_8garg")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1rd3"]
atlas = ExtResource("5_8garg")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_swynr"]
atlas = ExtResource("5_8garg")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b34uy"]
atlas = ExtResource("5_8garg")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_5ygyr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8svr")
}],
"loop": false,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgnse")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xiws2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1rd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swynr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b34uy")
}],
"loop": false,
"name": &"Shoot",
"speed": 20.0
}]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_nduhe"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("Gun:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="Player" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_37mwt")
jumpheight = 700
projectile_scene = ExtResource("2_830mt")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
scale = Vector2(3, 3)
texture = ExtResource("2_pcj8n")

[node name="CollisionBox" type="CollisionShape2D" parent="."]
position = Vector2(-4, 4)
shape = SubResource("RectangleShape2D_xhpyp")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="HitboxShape" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-4, 4)
shape = SubResource("RectangleShape2D_kvo5w")

[node name="Animation" type="AnimatedSprite2D" parent="."]
position = Vector2(-4, 3)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_cgg7v")
animation = &"Fall"

[node name="GunLoc" type="Marker2D" parent="Animation"]
position = Vector2(1.33333, -1)
scale = Vector2(1.19106, 1.19106)

[node name="Gun" type="AnimatedSprite2D" parent="."]
position = Vector2(-1.52588e-05, 0)
scale = Vector2(3.57317, 3.57317)
sprite_frames = SubResource("SpriteFrames_5ygyr")
animation = &"Shoot"
offset = Vector2(5.95621, -2.33363)

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="GlockCD" type="Timer" parent="."]

[node name="DashTimer" type="Timer" parent="."]
wait_time = 3.1
one_shot = true

[node name="DashDuration" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_nduhe")

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
[connection signal="timeout" from="GlockCD" to="." method="_on_glock_cd_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="DashDuration" to="." method="_on_dash_duration_timeout"]
